--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,15 +12,16 @@
   --font-mono: var(--font-geist-mono);
 
   /* Brand / semantic colors */
-  --color-primary-25: #f5f8ff;
-  --color-primary-50: #eef4ff;
-  --color-primary-100: #e0eaff;
-  --color-primary-200: #c7d7fe;
-  --color-primary-300: #a4bcfd;
-  --color-primary-500: #6172f3;
-  --color-primary-600: #444ce7;
-  --color-primary-700: #3538cd;
-  --color-primary-800: #2d31a6;
+  --color-primary-25: #fff4f2;
+  --color-primary-50: #ffe9e5;
+  --color-primary-100: #ffd3cc;
+  --color-primary-200: #ffb5aa;
+  --color-primary-300: #ff8f7e;
+  --color-primary-500: #ee6b59;
+  --color-primary-600: #dd5b4a;
+  --color-primary-700: #b8483a;
+  --color-primary-800: #93382d;
+  --color-brand: #dd5b4a;
 
   --color-success-50: #ecfdf3;
   --color-success-200: #a6f4c5;
@@ -37,10 +38,10 @@
 
   /* Box shadows used by buttons & inputs */
   --shadow-ButtonPrimary: 0px 1px 2px rgba(15, 23, 42, 0.08);
-  --shadow-ButtonFocus: 0px 0px 0px 4px rgba(68, 76, 231, 0.25);
+  --shadow-ButtonFocus: 0px 0px 0px 4px rgba(221, 91, 74, 0.25);
   --shadow-ShadowError100: 0px 0px 0px 4px rgba(217, 45, 32, 0.25);
   --shadow-ShadowGray100: 0px 1px 3px rgba(15, 23, 42, 0.1);
-  --shadow-ShadowPrimary100: 0px 0px 0px 4px rgba(68, 76, 231, 0.18);
+  --shadow-ShadowPrimary100: 0px 0px 0px 4px rgba(221, 91, 74, 0.18);
   --shadow-ShadowSuccess100: 0px 0px 0px 4px rgba(3, 152, 85, 0.2);
 }
 
