--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,9 @@
   --color-error-600: #d92d20;
   --color-error-700: #b42318;
 
+  /* Neutral */
+  --color-gray-base: #979797;
+
   /* Box shadows used by buttons & inputs */
   --shadow-ButtonPrimary: 0px 1px 2px rgba(15, 23, 42, 0.08);
   --shadow-ButtonFocus: 0px 0px 0px 4px rgba(221, 91, 74, 0.25);
@@ -131,4 +134,35 @@ html.dark .border-gray-200 {
 /* Ensure icons inherit text color properly in dark mode */
 html.dark svg {
   color: inherit;
+}
+
+/* Checkbox styling for Remember Me */
+input[type='checkbox'] {
+  cursor: pointer;
+}
+
+input[type='checkbox']:focus,
+input[type='checkbox']:focus-visible,
+input[type='checkbox']:focus-within {
+  box-shadow: none !important;
+  outline: none !important;
+  border-color: inherit;
+}
+
+.ant-checkbox-wrapper {
+  cursor: pointer;
+}
+
+
+.ant-checkbox-wrapper .ant-checkbox:focus,
+.ant-checkbox-wrapper .ant-checkbox:focus-visible,
+.ant-checkbox-wrapper .ant-checkbox:focus-within {
+  box-shadow: none !important;
+  outline: none !important;
+}
+
+.ant-checkbox-wrapper .ant-checkbox-input:focus,
+.ant-checkbox-wrapper .ant-checkbox-input:focus-visible {
+  box-shadow: none !important;
+  outline: none !important;
 }
